--- a/web2-main/demo1.html
+++ b/web2-main/demo1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>demo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <style>
@@ -115,7 +114,7 @@
             </div>
         </div>
 
-        <div class="cardCommunity row py-5 px-5" data-aos="fade-right">
+        <div class="cardCommunity row py-5 px-5">
             <h3>Past event from the community</h3>
 
             <div class="col mt-4">
@@ -153,64 +152,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
-<!-- Inisiasi AOS -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-<script>
-    // Animasi dari 0 ke angka yang dituju
-    function animateValue(id, start, end, duration) {
-      var obj = document.getElementById(id);
-      var range = end - start;
-      var minTimer = 50;
-      var stepTime = Math.abs(Math.floor(duration / range));
-      stepTime = Math.max(stepTime, minTimer);
-
-      var startTime = new Date().getTime();
-      var endTime = startTime + duration;
-      var timer;
-
-      function run() {
-        var now = new Date().getTime();
-        var remaining = Math.max((endTime - now) / duration, 0);
-        var value = Math.round(end - (remaining * range));
-        obj.innerHTML = value + '+';
-        if (value === end) {
-          clearInterval(timer);
-        }
-      }
-
-      timer = setInterval(run, stepTime);
-      run();
-    }
-
-    // cek jika elemen terbuka maka running animasi
-    function isElementInViewport(el) {
-      var rect = el.getBoundingClientRect();
-      return (
-        rect.top >= 0 &&
-        rect.left >= 0 &&
-        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-        rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-      );
-    }
-
-    function checkAnimation() {
-      var section = document.getElementById('introduction-section');
-      if (isElementInViewport(section)) {
-        window.removeEventListener('scroll', checkAnimation);
-        animateValue("chapters", 0, 2100, 2000);
-        animateValue("countries", 0, 100, 2000);
-      }
-    }
-
-    window.addEventListener('scroll', checkAnimation);
-    window.addEventListener('load', checkAnimation);
-
-    // animasi card AOS
-    AOS.init();
-
-</script>
 
 </body>
 </html>
